--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                                         <div class="room" data-room="9" data-price="300">חדר 9<br>₪300</div>
                                         <div class="room" data-room="10" data-price="300">חדר 10<br>₪300</div>
                                     </div>
+                                </div>
+                                <div class="places">
                                     <div class="floor">
                                         <h3>קומה שנייה</h3>
                                         <div class="room-map">
