--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                             <h3>מתחם חדש א'</h3>
                             <div class="room-map">
                                 <div class="BigApartment">
-                                    <div class="room" data-room="דירה גדולה 1" data-price="500">דירה גדולה- 3 חדרים<br>₪500</div>
+                                    <div class="room" data-room="גדול: 1, 2, 3" data-price="500">דירה גדולה- 3 חדרים<br>₪500</div>
                                 </div>
                                 <div class="room" data-room="4" data-price="300">חדר 4<br>₪300</div>
                                 <div class="room" data-room="5" data-price="300">חדר 5<br>₪300</div>   
                                 <div class="BigApartment">
-                                    <div class="room" data-room="6" data-price="500">דירה גדולה- 3 חדרים<br>₪500</div>
+                                    <div class="room" data-room="גדול: 6, 7, 8" data-price="500">דירה גדולה- 3 חדרים<br>₪500</div>
                                 </div>
                             </div>
                         </div>
